[gd_scene load_steps=3 format=3 uid="uid://c1uimetmcmv8s"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_seq3b"]
[ext_resource type="PackedScene" uid="uid://bcrqqi76p6yg5" path="res://scenes/responsive_touch.tscn" id="2_ykisa"]

[node name="game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_seq3b")

[node name="columns" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="pad" type="Control" parent="columns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="left_panel" type="VBoxContainer" parent="columns"]
layout_mode = 2
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="pad" type="Control" parent="columns/left_panel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="pops" type="HBoxContainer" parent="columns/left_panel"]
layout_mode = 2
alignment = 1

[node name="pop_counter" type="VBoxContainer" parent="columns/left_panel/pops"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="Label" type="Label" parent="columns/left_panel/pops/pop_counter"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Unspent pops:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="pops" type="Label" parent="columns/left_panel/pops/pop_counter"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="pop_counter_total" type="VBoxContainer" parent="columns/left_panel/pops"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="Label" type="Label" parent="columns/left_panel/pops/pop_counter_total"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Total pops:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="pops" type="Label" parent="columns/left_panel/pops/pop_counter_total"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pad4" type="Control" parent="columns/left_panel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="stats" type="HBoxContainer" parent="columns/left_panel"]
layout_mode = 2
alignment = 1

[node name="pop_value" type="VBoxContainer" parent="columns/left_panel/stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="pop_profit" type="HBoxContainer" parent="columns/left_panel/stats/pop_value"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 10
alignment = 2

[node name="Label" type="Label" parent="columns/left_panel/stats/pop_value/pop_profit"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Pop profit: "
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="pop_profit" type="Label" parent="columns/left_panel/stats/pop_value/pop_profit"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
vertical_alignment = 1
autowrap_mode = 1

[node name="reload_time" type="HBoxContainer" parent="columns/left_panel/stats/pop_value"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 10
alignment = 2

[node name="Label" type="Label" parent="columns/left_panel/stats/pop_value/reload_time"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Reload time: "
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="pop_profit" type="Label" parent="columns/left_panel/stats/pop_value/reload_time"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
vertical_alignment = 1
autowrap_mode = 1

[node name="autopop" type="VBoxContainer" parent="columns/left_panel/stats"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="autopop_counter" type="HBoxContainer" parent="columns/left_panel/stats/autopop"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 10
alignment = 2

[node name="Label" type="Label" parent="columns/left_panel/stats/autopop/autopop_counter"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Autopoppers: "
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="autopop_counter" type="Label" parent="columns/left_panel/stats/autopop/autopop_counter"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
vertical_alignment = 1
autowrap_mode = 1

[node name="autopop_reload" type="HBoxContainer" parent="columns/left_panel/stats/autopop"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 10
alignment = 2

[node name="Label" type="Label" parent="columns/left_panel/stats/autopop/autopop_reload"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Autopop time: "
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="autopop_reload" type="Label" parent="columns/left_panel/stats/autopop/autopop_reload"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
vertical_alignment = 1
autowrap_mode = 1

[node name="pad2" type="Control" parent="columns/left_panel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="pop_upgrade" type="HBoxContainer" parent="columns/left_panel"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="columns/left_panel/pop_upgrade"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Profit"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="pop_up" parent="columns/left_panel/pop_upgrade" instance=ExtResource("2_ykisa")]
layout_mode = 2
sprite_frame = 9
button_size = 96
buy_button = true

[node name="cost" type="Label" parent="columns/left_panel/pop_upgrade"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "10"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="auto_upgrade" type="HBoxContainer" parent="columns/left_panel"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="columns/left_panel/auto_upgrade"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Auto"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="auto_up" parent="columns/left_panel/auto_upgrade" instance=ExtResource("2_ykisa")]
layout_mode = 2
sprite_frame = 9
button_size = 96
buy_button = true

[node name="cost" type="Label" parent="columns/left_panel/auto_upgrade"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "10"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="auto_sp_upgrade" type="HBoxContainer" parent="columns/left_panel"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="columns/left_panel/auto_sp_upgrade"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Auto speed"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="auto_sp_up" parent="columns/left_panel/auto_sp_upgrade" instance=ExtResource("2_ykisa")]
layout_mode = 2
sprite_frame = 9
button_size = 96
buy_button = true

[node name="cost" type="Label" parent="columns/left_panel/auto_sp_upgrade"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="size_upgrade" type="HBoxContainer" parent="columns/left_panel"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="columns/left_panel/size_upgrade"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = " Size"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="size_up" parent="columns/left_panel/size_upgrade" instance=ExtResource("2_ykisa")]
layout_mode = 2
sprite_frame = 9
button_size = 96
buy_button = true

[node name="cost" type="Label" parent="columns/left_panel/size_upgrade"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="reload_upgrade" type="HBoxContainer" parent="columns/left_panel"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="columns/left_panel/reload_upgrade"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Reload"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="reload_up" parent="columns/left_panel/reload_upgrade" instance=ExtResource("2_ykisa")]
layout_mode = 2
sprite_frame = 9
button_size = 96
buy_button = true

[node name="cost" type="Label" parent="columns/left_panel/reload_upgrade"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "25"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="pad3" type="Control" parent="columns/left_panel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="pad3" type="Control" parent="columns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="right_panel" type="VBoxContainer" parent="columns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="exit_mute" type="HBoxContainer" parent="columns/right_panel"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="pad" type="Control" parent="columns/right_panel/exit_mute"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="mute" parent="columns/right_panel/exit_mute" instance=ExtResource("2_ykisa")]
layout_mode = 2
sprite_frame = 8

[node name="exit" parent="columns/right_panel/exit_mute" instance=ExtResource("2_ykisa")]
layout_mode = 2
sprite_frame = 7

[node name="pad2" type="Control" parent="columns/right_panel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="bubble_grid" type="GridContainer" parent="columns/right_panel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
columns = 5

[node name="bubble1" parent="columns/right_panel/bubble_grid" instance=ExtResource("2_ykisa")]
layout_mode = 2
sprite_frame = 12
option_button = false

[node name="bubble2" parent="columns/right_panel/bubble_grid" instance=ExtResource("2_ykisa")]
layout_mode = 2
sprite_frame = 12
option_button = false

[node name="bubble3" parent="columns/right_panel/bubble_grid" instance=ExtResource("2_ykisa")]
layout_mode = 2
sprite_frame = 12
option_button = false

[node name="pad3" type="Control" parent="columns/right_panel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="pad2" type="Control" parent="columns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="autopop_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="autopoppers" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="buy_attempt" from="columns/left_panel/pop_upgrade/pop_up" to="." method="_on_pop_up_buy_attempt"]
[connection signal="buy_attempt" from="columns/left_panel/auto_upgrade/auto_up" to="." method="_on_auto_up_buy_attempt"]
[connection signal="buy_attempt" from="columns/left_panel/auto_sp_upgrade/auto_sp_up" to="." method="_on_auto_sp_up_buy_attempt"]
[connection signal="buy_attempt" from="columns/left_panel/size_upgrade/size_up" to="." method="_on_size_up_buy_attempt"]
[connection signal="buy_attempt" from="columns/left_panel/reload_upgrade/reload_up" to="." method="_on_reload_up_buy_attempt"]
[connection signal="pressed" from="columns/right_panel/exit_mute/mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="columns/right_panel/exit_mute/exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="autopop_timer" to="." method="autopop"]
